# twyn

./: .cz.toml  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  VERSION  justfile  lgtm.toml  pyproject.toml
.github/: dependabot.yml  release.yml
.github/actions/docker-build/: action.yml
.github/actions/python-package-build/: action.yml
.github/workflows/: auto-merge.yml  build-test-docker.yml  build-test-python.yml  build-test.yml  bump-version.yml  bumpversion.yml  conventional-label.yaml  dependabot.yml  lgtm.yml  lint.yml  pnpm-lock.yaml  preview-bump-version.yml  publish.yml  security.yml  test-publish.yml  test.yml  trigger-test-docker-build.yml  weekly_download.yml
dependencies/: dockerhub.json  npm.json  npm_formatted.json  pypi.json
dependencies/scripts/: download_packages.py  exceptions.py  utils.py
dependencies/tests/: test_download_packages.py
src/twyn/: __init__.py  __version__.py  cli.py  main.py
src/twyn/base/: constants.py  exceptions.py  utils.py
src/twyn/config/: config_handler.py  exceptions.py
src/twyn/core/: config_handler.py  exceptions.py
src/twyn/dependency_managers/: __init__.py  dependency_manager.py  exceptions.py  managers.py  utils.py
src/twyn/dependency_managers/managers/: base.py  npm_dependency_manager.py  pypi_dependency_manager.py
src/twyn/dependency_parser/: __init__.py  abstract_parser.py  constants.py  dependency_selector.py  exceptions.py  lock_parser.py  poetry_lock.py  requirements_txt.py  requirements_txt_parser.py
src/twyn/dependency_parser/parsers/: abstract_parser.py  constants.py  docker_compose_parser.py  dockerfile_parser.py  exceptions.py  lock_parser.py  package_lock_json.py  pnpm_lock_parser.py  requirements_txt_parser.py  yarn_lock_parser.py
src/twyn/file_handler/: exceptions.py  file_handler.py
src/twyn/mcp/: main.py
src/twyn/similarity/: algorithm.py  exceptions.py
src/twyn/trusted_packages/: __init__.py  cache_handler.py  constants.py  exceptions.py  models.py  references.py  selectors.py  trusted_packages.py
src/twyn/trusted_packages/managers/: base.py  trusted_dockerhub_packages_manager.py  trusted_npm_packages_manager.py  trusted_pypi_packages_manager.py
src/twyn/trusted_packages/references/: base.py  top_dockerhub_reference.py  top_npm_reference.py  top_pypi_reference.py
tests/: conftest.py
tests/config/: test_config_handler.py
tests/core/: test_config_handler.py
tests/dependency_managers/: test_dependency_managers.py
tests/dependency_parser/: test_dependency_parser.py  test_dependency_selector.py
tests/file_handler/: test_file_handler.py
tests/main/: conftest.py  test_cli.py  test_main.py
tests/similarity/: test_algorithm.py
tests/trusted_packages/: test_cache_handler.py  test_models.py  test_references.py  test_selectors.py  test_trusted_packages.py
tmp/tmp/tmp/tmp/tmp/: requirements.txt
