[project]
authors = [
    {name = "Daniel Sanz", email = "imsdn4z@gmail.com"},
    {name = "Sergio Castillo", email = "s.cast.lara@gmail.com"},
    {name = "Ludo van Orden"},
    {name = "Dmitrii Fedotov"},
]
maintainers = [
    {name = "Daniel Sanz", email = "imsdn4z@gmail.com"},
    {name = "Sergio Castillo", email = "s.cast.lara@gmail.com"},
]
requires-python = "<4,>=3.9"
dependencies = [
    "requests<3.0.0,>=2.32.4",
    "dparse<1.0.0,>=0.6.4",
    "click<9.0.0,>=8.1.8",
    "rich<15.0.0,>=14.0.0",
    "rapidfuzz<4.0.0,>=2.13.7",
    "pyparsing<4.0.0,>=3.2.3",
    "tomlkit<0.14.0,>=0.11.6",
    "tomli<3.0.0,>=2.2.1; python_version < \"3.13\"",
    "pydantic>=2.11.7,<3.0.0",
]
name = "twyn"
description = "Security tool against dependency typosquatting attacks"
readme = "README.md"
dynamic = ["version"]

[tool.hatch.version]
path = "VERSION"
pattern = "v(?P<version>[^\\s]+)"

[tool.hatch.build.targets.wheel]
packages = ["src/twyn"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/VERSION",
    "/pyproject.toml",
]

[project.scripts]
twyn = "twyn.cli:entry_point"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=7.1.3",
    "mypy<1.17,>=0.982",
    "pytest-cov<7,>=4",
    "ruff<0.12.4,>=0.5.1",
    "types-requests<3.0.0.0,>=2.32.4.20250611",
    "types-python-dateutil>=2.9.0.20250809",
     "freezegun>=1.5.5",
]
local = [
    "ipdb<1.0.0,>=0.13.9",
    "commitizen<5.0,>=2.38",
    "pdbpp<1.0.0,>=0.11.6",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 120

src = ["twyn", "tests"]
[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C",   # mccabe
  "E",   # pycodestyle
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "D",   # pydocstyle
  "I",   # isort
  "C4",  # comprehensions
  "SIM", # simplify
  "N",   # pep8-naming
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "PT",  # pytest-style
  "TCH", # type-checking
  "PL",  # pylint
  "G",   # logging format
  "TID", # tidy-imports
]
ignore = [
  "E501",    # line-length (enforced by black instead)
  'D1',      # pydocstyle enforces docstrings everywhere
  'TRY003',  # tryceratops rule not useful
  "PLR0913", # pylint rule not useful
  "B008",    # checks for function calls in default function arguments.
  'D206',    # conflicts with formatter
  'W191',    # conflicts with formatter
  'D203',    # conflicts with formatter
  'D211',    # conflicts with formatter
  'D212',    # conflicts with formatter
  'UP031',   # allow strings formated with %s
  'PLR2004'  # magic value
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
warn_no_return = false
warn_unused_ignores = true
disallow_any_generics = true


[tool.pytest.ini_options]
addopts = """
    -s
    --cov
    --cov-report term-missing
    --cov-report=xml:./tests/coverage.xml
    --junitxml=./tests/junit.xml
"""

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]


